# jobo

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: polynomial_bo.py
jobo/: acquisition_functions.py  bayesian_optimization.py  jobo.py  objective_function.py  surrogate_models.py  util.py
